qrgen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrgen
spec:
  selector:
    app: qrgen
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
